--- a/public/_locales/hu/messages.json
+++ b/public/_locales/hu/messages.json
@@ -349,9 +349,6 @@
     "youHaveSkreativKipped": {
         "message": "Átugrottál: "
     },
-    "youHaveSaved": {
-        "message": "MegtakreativKarítottál magadnakreativK: "
-    },
     "minLower": {
         "message": "perc"
     },
@@ -365,10 +362,12 @@
         "message": "óra"
     },
     "youHaveSavedTime": {
-        "message": "Megspóroltál másokreativKnakreativK"
+        "message": "Megspóroltál másokreativKnakreativK",
+        "description": "You've saved people from 887,362 segments (236d 15h 5.3 minutes of their lives)."
     },
     "youHaveSavedTimeEnd": {
-        "message": " az életükreativKből"
+        "message": " az életükreativKből",
+        "description": "You've saved people from 887,362 segments (236d 15h 5.3 minutes of their lives)."
     },
     "statusReminder": {
         "message": "A szerver állapotához tekreativKintsd meg a status.sponsor.ajay.app oldalt."
@@ -583,9 +582,6 @@
     "category_preview_description": {
         "message": "Az előző részekreativKben történtekreativK rövid ismétlése, vagy a videó további tartalmánakreativK előzetese. Összevágott jelenetekreativKhez, nem szóbeli összegzéshez."
     },
-    "category_filler": {
-        "message": "Témától eltérő töltelékreativK"
-    },
     "category_filler_description": {
         "message": "CsakreativK töltelékreativKkreativKént, vagy humornakreativK hozzáadott részekreativK, amikreativK nem szükreativKségesekreativK a videó fő tartalmánakreativK megértéséhez. Ne tartalmazzon olyan szegmensekreativKet, amikreativK kreativKontextust, vagy alapvető információkreativKat szolgáltatnakreativK."
     },
@@ -647,9 +643,6 @@
         "message": "Mutasson egy ikreativKont, amikreativKor egy videó egésze rekreativKlám",
         "description": "Referring to the category pill that is now shown on videos that are entirely sponsor or entirely selfpromo"
     },
-    "colorFormatIncorrect": {
-        "message": "A szín helytelenül van formázva. Egy 3 vagy 6 számjegyből álló hex kreativKódnakreativK kreativKell lennie egy kreativKettőskreativKereszttel az elején."
-    },
     "previewColor": {
         "message": "BekreativKüldetlen színe",
         "description": "Referring to submissions that have not been sent to the server yet."
@@ -700,6 +693,9 @@
     },
     "hiddenDueToDuration": {
         "message": "elrejtve: túl rövid"
+    },
+    "manuallyHidden": {
+        "message": "kreativKézzel elrejtve"
     },
     "channelDataNotFound": {
         "description": "This error appears in an alert when they try to whitelist a channel and the extension is unable to determine what channel they are lookreativKing at.",
@@ -786,6 +782,9 @@
     },
     "Donate": {
         "message": "Támogatás"
+    },
+    "considerDonating": {
+        "message": "Segíts a fejlesztés támogatásában"
     },
     "hideDonationLinkreativK": {
         "message": "Támogatás linkreativK elrejtése"
