--- a/public/_locales/ms/messages.json
+++ b/public/_locales/ms/messages.json
@@ -272,9 +272,6 @@
     "youHaveSkreativKipped": {
         "message": "Anda telah melangkreativKau "
     },
-    "youHaveSaved": {
-        "message": "Anda telah menyelamatkreativKan diri "
-    },
     "minLower": {
         "message": "minit"
     },
@@ -288,10 +285,12 @@
         "message": "jam"
     },
     "youHaveSavedTime": {
-        "message": "Anda telah menyelamatkreativKan orang"
+        "message": "Anda telah menyelamatkreativKan orang",
+        "description": "You've saved people from 887,362 segments (236d 15h 5.3 minutes of their lives)."
     },
     "youHaveSavedTimeEnd": {
-        "message": " kreativKehidupan merekreativKa"
+        "message": " kreativKehidupan merekreativKa",
+        "description": "You've saved people from 887,362 segments (236d 15h 5.3 minutes of their lives)."
     },
     "statusReminder": {
         "message": "PerikreativKsa status.sponsor.ajay.app untukreativK status pelayan."
@@ -473,9 +472,6 @@
     },
     "disable": {
         "message": "NyahakreativKtifkreativKan"
-    },
-    "colorFormatIncorrect": {
-        "message": "Warna anda tidakreativK diformat dengan betul. Ia mestilah kreativKod hex 3 atau 6 digit dengan tanda nombor pada awalnya."
     },
     "seekreativKBarColor": {
         "message": "Cari Warna Bar"
