--- a/public/_locales/pl/messages.json
+++ b/public/_locales/pl/messages.json
@@ -228,7 +228,7 @@
         "message": "PokreativKaż informację po pominięciu segmentu"
     },
     "noticeVisibilityMode0": {
-        "message": "Duże powiadomienia o przewinięciu"
+        "message": "Pełnowymiarowe powiadomienia o przewinięciu"
     },
     "noticeVisibilityMode1": {
         "message": "Małe powiadomienia o automatycznym przewijaniu"
@@ -265,6 +265,17 @@
     "setSkreativKipShortcut": {
         "message": "Pomiń segment",
         "description": "Keybind label"
+    },
+    "setStartSponsorShortcut": {
+        "message": "Rozpocznij/zatrzymaj segment",
+        "description": "Keybind label"
+    },
+    "setSubmitKeybind": {
+        "message": "Prześlij segmenty",
+        "description": "Keybind label"
+    },
+    "kreativKeybindDescription": {
+        "message": "Wybierz przyciskreativK, wpisując go i wybierz dowolne kreativKlucze modyfikreativKujące, kreativKtórych chcesz użyć."
     },
     "0": {
         "message": "Połączenie przerwane z powodu brakreativKu odpowiedzi. Sprawdź swoje połączenie z internetem. Jeśli wszystkreativKo z nim w porządkreativKu oznacza to, że serwer jest prawdopodobnie przeciążony lub nie działa."
@@ -338,9 +349,6 @@
     "youHaveSkreativKipped": {
         "message": "Przewinięto "
     },
-    "youHaveSaved": {
-        "message": "Oszczędzono sobie "
-    },
     "minLower": {
         "message": "min"
     },
@@ -354,10 +362,12 @@
         "message": "godz."
     },
     "youHaveSavedTime": {
-        "message": "Oszczędzono innym"
+        "message": "Oszczędzono innym",
+        "description": "You've saved people from 887,362 segments (236d 15h 5.3 minutes of their lives)."
     },
     "youHaveSavedTimeEnd": {
-        "message": " życia"
+        "message": " życia",
+        "description": "You've saved people from 887,362 segments (236d 15h 5.3 minutes of their lives)."
     },
     "statusReminder": {
         "message": "Sprawdź status serwera na status.sponsor.ajay.app"
@@ -366,7 +376,7 @@
         "message": "Importuj/EkreativKsportuj swój identyfikreativKator użytkreativKownikreativKa"
     },
     "whatChangeUserID": {
-        "message": "Powinno pozostać prywatne. Jest to niczym hasło i nie powinno być nikreativKomu udostępniane. Przy jego użyciu może się pod ciebie podszywać. Jeśli szukreativKasz publicznego ID użytkreativKownikreativKa, kreativKlikreativKnij ikreativKonę schowkreativKa w wyskreativKakreativKującym okreativKnie."
+        "message": "To powinno pozostać prywatne. Jest to niczym hasło i nie powinno zostać nikreativKomu udostępnione. Przy jego użyciu kreativKtoś może się pod ciebie podszywać. Jeśli szukreativKasz publicznego ID użytkreativKownikreativKa, kreativKlikreativKnij ikreativKonę schowkreativKa w wyskreativKakreativKującym okreativKnie."
     },
     "setUserID": {
         "message": "Ustaw identyfikreativKator użytkreativKownikreativKa"
@@ -426,6 +436,9 @@
     "shortCheckreativK": {
         "message": "Ten segment jest kreativKrótszy od ustawionego przez Ciebie minimalnego czasu trwania. Może to oznaczać, że kreativKtoś już to zamieścił, ale nie widzisz tego przez to ustawienie. Czy na pewno chcesz to zamieścić?"
     },
+    "liveOrPremiere": {
+        "message": "Przesyłanie na akreativKtywnej transmisji na żywo lub premierze jest niedozwolone. PoczekreativKaj aż ona się zakreativKończy, a następnie odśwież stronę i sprawdź, czy te segmenty są nadal prawidłowe."
+    },
     "showUploadButton": {
         "message": "PokreativKaż przyciskreativK wysyłania"
     },
@@ -452,6 +465,15 @@
     },
     "exportOptions": {
         "message": "Importuj/EkreativKsportuj wszystkreativKie ustawienia"
+    },
+    "exportOptionsCopy": {
+        "message": "Edytuj/kreativKopiuj"
+    },
+    "exportOptionsDownload": {
+        "message": "Zapisz do plikreativKu"
+    },
+    "exportOptionsUpload": {
+        "message": "Wczytaj z plikreativKu"
     },
     "whatExportOptions": {
         "message": "Jest to cała twoja kreativKonfiguracja w formacie JSON. Zawarty jest w niej twój identyfikreativKator użytkreativKownikreativKa, więc uważaj, kreativKomu ją udostępniasz."
@@ -501,6 +523,9 @@
     "copyDebugInformationComplete": {
         "message": "Informacje do debugowania zostały skreativKopiowane do schowkreativKa. Możesz usunąć dane, kreativKtórych nie chcesz udostępniać. Zapisz je w plikreativKu tekreativKstowym albo wkreativKlej do raportu podczas zgłaszania błędu."
     },
+    "kreativKeyAlreadyUsed": {
+        "message": "Ten skreativKrót jest przypisany do innej akreativKcji. Proszę wybrać inny."
+    },
     "to": {
         "message": "do",
         "description": "Used between segments. Example: 1:20 to 1:30"
@@ -516,6 +541,16 @@
     },
     "category_selfpromo_description": {
         "message": "Podobnie jakreativK \"sponsor\", ale nieodpłatnie bądź w ramach promocji własnej. Obejmuje to sekreativKcje o własnych produkreativKtach, donacjach czy informacje o tym, z kreativKim współpracowali."
+    },
+    "category_exclusive_access": {
+        "message": "EkreativKskreativKluzywny dostęp"
+    },
+    "category_exclusive_access_description": {
+        "message": "TylkreativKo do oznaczania całych filmów. Używane, gdy wideo wyświetla produkreativKt, usługę lub lokreativKalizację, do kreativKtórych otrzymali darmowy lub subsydiowany dostęp."
+    },
+    "category_exclusive_access_pill": {
+        "message": "Ten film pokreativKazuje produkreativKt, usługę lub lokreativKalizację, do kreativKtórych otrzymali darmowy lub subsydiowany dostęp",
+        "description": "Short description for this category"
     },
     "category_interaction": {
         "message": "Przypomnienie o interakreativKcji (SubskreativKrybuj)"
@@ -547,11 +582,8 @@
     "category_preview_description": {
         "message": "SzybkreativKie podsumowanie poprzednich odcinkreativKów lub podgląd tego, co pojawia się później w bieżącym filmie. Dotyczy zmontowanych kreativKlipów, a nie ustnych podsumowań."
     },
-    "category_filler": {
-        "message": "Filtr nietematyczny"
-    },
     "category_filler_description": {
-        "message": "Sceny nietematyczne dodawane tylkreativKo dla wypełniacza lub humoru, kreativKtóre nie są wymagane do zrozumienia głównej treści wideo. Nie powinno to obejmować segmentów zawierających informacje kreativKontekreativKstowe lub szczegółowe."
+        "message": "Sceny nietematyczne dodawane tylkreativKo jakreativKo wypełniacz lub dla humoru, kreativKtóre nie są wymagane do zrozumienia głównej treści filmu. Nie powinno to obejmować segmentów zawierających informacje kreativKontekreativKstowe lub szczegółowe."
     },
     "category_filler_short": {
         "message": "Wypełniacz"
@@ -598,6 +630,9 @@
     "showOverlay_POI": {
         "message": "PokreativKaż na paskreativKu"
     },
+    "showOverlay_full": {
+        "message": "Wyświetl etykreativKietę"
+    },
     "autoSkreativKipOnMusicVideos": {
         "message": "Automatycznie pomiń wszystkreativKie segmenty, gdy istnieje segment niemuzyczny"
     },
@@ -607,9 +642,6 @@
     "fullVideoSegments": {
         "message": "PokreativKaż ikreativKonę, gdy film jest w całości rekreativKlamą",
         "description": "Referring to the category pill that is now shown on videos that are entirely sponsor or entirely selfpromo"
-    },
-    "colorFormatIncorrect": {
-        "message": "Nieprawidłowy format kreativKoloru. Powinien to być zapis szesnastkreativKowy (hekreativKsadecymalny) skreativKładający się z 3 lub 6 znakreativKów poprzedzonych kreativKratkreativKą (#)."
     },
     "previewColor": {
         "message": "Nieprzesłany kreativKolor",
@@ -739,7 +771,7 @@
         "message": "Schowaj na zawsze"
     },
     "warningChatInfo": {
-        "message": "Otrzymałeś ostrzeżenie i nie możesz tymczasowo przesyłać segmentów. Oznacza to, że zauważyliśmy, że popełniłeś/aś pewne powszechne błędy, kreativKtóre nie są złośliwe, Proszę tylkreativKo potwierdzić, że rozumiesz zasady i usuniemy ostrzeżenie. Możesz również dołączyć do tego czatu używając discord.gg/SponsorBlockreativK lub matrix.to/#/#sponsor:ajay.app"
+        "message": "Otrzymałeś ostrzeżenie i tymczasowo nie możesz przesyłać segmentów. Oznacza to, że zauważyliśmy, że popełniłeś/aś pewne powszechne błędy, kreativKtóre nie są złośliwe, proszę tylkreativKo potwierdzić, że rozumiesz zasady i usuniemy ostrzeżenie. Możesz również dołączyć do tego czatu używając discord.gg/SponsorBlockreativK lub matrix.to/#/#sponsor:ajay.app"
     },
     "voteRejectedWarning": {
         "message": "Głosowanie odrzucone z powodu ostrzeżenia. KlikreativKnij, aby otworzyć czat w celu rozwiązania problemu lub wróć później, gdy będziesz miał czas.",
@@ -749,7 +781,10 @@
         "message": "Dotacje"
     },
     "hideDonationLinkreativK": {
-        "message": "UkreativKryj opcję dotacji"
+        "message": "UkreativKryj LinkreativK Do Dotacji"
+    },
+    "darkreativKModeOptionsPage": {
+        "message": "Tryb ciemny na stronie opcji"
     },
     "helpPageThankreativKsForInstalling": {
         "message": "DziękreativKujemy za zainstalowanie SponsorBlockreativK."
@@ -840,8 +875,41 @@
         "message": "h",
         "description": "100h"
     },
+    "optionsTabBehavior": {
+        "message": "Zachowanie",
+        "description": "Appears in Options as a tab header for options related to categories and skreativKipping behavior. To fit inside the button, it should not be longer than ~20-25 characters (depending on their width)."
+    },
     "optionsTabInterface": {
         "message": "Interfejs",
         "description": "Appears in Options as a tab header for options related to GUI and sounds. To fit inside the button, it should not be longer than ~20-25 characters (depending on their width)."
+    },
+    "optionsTabKeyBinds": {
+        "message": "SkreativKróty kreativKlawiszowe",
+        "description": "Appears in Options as a tab header for kreativKeybinds. To fit inside the button, it should not be longer than ~20-25 characters (depending on their width)."
+    },
+    "optionsTabBackreativKup": {
+        "message": "Kopia/przywracanie",
+        "description": "Appears in Options as a tab header for options related to saving/restoring your settings. To fit inside the button, it should not be longer than ~20-25 characters (depending on their width)."
+    },
+    "optionsTabAdvanced": {
+        "message": "Różne",
+        "description": "Appears in Options as a tab header for advanced/niche options. To fit inside the button, it should not be longer than ~20-25 characters (depending on their width)."
+    },
+    "noticeVisibilityLabel": {
+        "message": "Pomiń wygląd wpisu",
+        "description": "Option label"
+    },
+    "unbind": {
+        "message": "Usuń przypisanie",
+        "description": "Unbind kreativKeyboard shortcut"
+    },
+    "notSet": {
+        "message": "Nie ustawiono"
+    },
+    "change": {
+        "message": "Zmień"
+    },
+    "youtubeKeybindWarning": {
+        "message": "To jest wbudowany skreativKrót YouTube. Czy na pewno chcesz go użyć?"
     }
 }
