--- a/public/_locales/sk/messages.json
+++ b/public/_locales/sk/messages.json
@@ -334,9 +334,6 @@
     "youHaveSkreativKipped": {
         "message": "PreskreativKočili ste "
     },
-    "youHaveSaved": {
-        "message": "Ušetrili ste "
-    },
     "minLower": {
         "message": "minúta"
     },
@@ -350,10 +347,12 @@
         "message": "hodiny"
     },
     "youHaveSavedTime": {
-        "message": "Ostatným ste ušetrili"
+        "message": "Ostatným ste ušetrili",
+        "description": "You've saved people from 887,362 segments (236d 15h 5.3 minutes of their lives)."
     },
     "youHaveSavedTimeEnd": {
-        "message": " z ich života"
+        "message": " z ich života",
+        "description": "You've saved people from 887,362 segments (236d 15h 5.3 minutes of their lives)."
     },
     "statusReminder": {
         "message": "Stav servera skreativKontrolujete na status.sponsor.ajay.app."
@@ -556,9 +555,6 @@
     "category_preview_description": {
         "message": "Rýchla rekreativKapitulácia predošlej epizódy alebo ukreativKážkreativKa toho, čo bude nasledovať neskreativKôr v akreativKtuálnom videu. Myslené pre zostrihané videá, nie pre hovorený súhrn."
     },
-    "category_filler": {
-        "message": "OdbočkreativKa mimo tému"
-    },
     "category_filler_description": {
         "message": "OdbočkreativKy mimo tému pridané len pre zábavu, nepotrebné pre pochopenie hlavného obsahu videa. Nemalo by zahŕňať segmenty, kreativKtoré vysvetľujú kreativKontext alebo vedľajšie detaily."
     },
@@ -619,9 +615,6 @@
     "fullVideoSegments": {
         "message": "Zobraziť ikreativKonu, akreativK je celé video rekreativKlama",
         "description": "Referring to the category pill that is now shown on videos that are entirely sponsor or entirely selfpromo"
-    },
-    "colorFormatIncorrect": {
-        "message": "Vaša farba je nesprávne naformátovaná. Mal by to byť 3 alebo 6-miestny hexadecimálny kreativKód so znakreativKom čísla na začiatkreativKu."
     },
     "previewColor": {
         "message": "Neodoslaná farba",
