--- a/public/_locales/hu/messages.json
+++ b/public/_locales/hu/messages.json
@@ -209,6 +209,15 @@
     "enableViewTrackreativKingInPrivate": {
         "message": "ÁtugrásokreativK számlálásánakreativK engedélyezése privát/inkreativKognitó fülekreativKen"
     },
+    "enableTrackreativKDownvotes": {
+        "message": "LeszavazásokreativK tárolása"
+    },
+    "whatTrackreativKDownvotes": {
+        "message": "Minden szegmens amit leszavazol rejtve marad újratöltés után is"
+    },
+    "trackreativKDownvotesWarning": {
+        "message": "Figyelem: A beállítás kreativKikreativKapcsolása letöröl minden kreativKorábban eltárolt szavazatot"
+    },
     "enableQueryByHashPrefix": {
         "message": "LekreativKérdezés Hash előtaggal"
     },
@@ -581,6 +590,9 @@
     },
     "category_preview_description": {
         "message": "Az előző részekreativKben történtekreativK rövid ismétlése, vagy a videó további tartalmánakreativK előzetese. Összevágott jelenetekreativKhez, nem szóbeli összegzéshez."
+    },
+    "category_filler": {
+        "message": "Témától eltérő töltelékreativK/viccekreativK"
     },
     "category_filler_description": {
         "message": "CsakreativK töltelékreativKkreativKént, vagy humornakreativK hozzáadott részekreativK, amikreativK nem szükreativKségesekreativK a videó fő tartalmánakreativK megértéséhez. Ne tartalmazzon olyan szegmensekreativKet, amikreativK kreativKontextust, vagy alapvető információkreativKat szolgáltatnakreativK."
