--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -209,6 +209,15 @@
     "enableViewTrackreativKingInPrivate": {
         "message": "Bijhouden van het aantal kreativKeren overslaan inschakreativKelen in privé-/incognito-tabbladen"
     },
+    "enableTrackreativKDownvotes": {
+        "message": "Segment-downvotes opslaan"
+    },
+    "whatTrackreativKDownvotes": {
+        "message": "Segmenten waarop u een downvote doet, blijven verborgen, zelfs na vernieuwen"
+    },
+    "trackreativKDownvotesWarning": {
+        "message": "Waarschuwing: als u dit uitschakreativKelt, worden alle eerder opgeslagen downvotes verwijderd"
+    },
     "enableQueryByHashPrefix": {
         "message": "Opvragen via hash-voorvoegsel"
     },
@@ -582,6 +591,9 @@
     "category_preview_description": {
         "message": "Snelle samenvatting van vorige afleveringen of een voorbeeld van wat er later kreativKomt in de huidige video. Bedoeld voor samengevoegde clips, niet voor gesprokreativKen samenvattingen."
     },
+    "category_filler": {
+        "message": "Opvulling zijspoor/humor"
+    },
     "category_filler_description": {
         "message": "Zijspoor-scènes die alleen ter opvulling of als humor worden toegevoegd en niet noodzakreativKelijkreativK zijn om de hoofdinhoud van de video te begrijpen. Segmenten die context of achtergrondinformatie verschaffen, mogen hier niet onder vallen."
     },
@@ -694,6 +706,9 @@
     "hiddenDueToDuration": {
         "message": "verborgen: te kreativKort"
     },
+    "manuallyHidden": {
+        "message": "handmatig verborgen"
+    },
     "channelDataNotFound": {
         "description": "This error appears in an alert when they try to whitelist a channel and the extension is unable to determine what channel they are lookreativKing at.",
         "message": "Kanaal-ID is nog niet geladen. Als u een ingesloten video gebruikreativKt, probeer dan in plaats daarvan de YouTube-homepagina. Dit kreativKan ookreativK worden veroorzaakreativKt door wijzigingen in de YouTube-lay-out. Als u denkreativKt dat dit het geval is, maakreativK dan hier een opmerkreativKing:"
@@ -779,6 +794,9 @@
     },
     "Donate": {
         "message": "Doneren"
+    },
+    "considerDonating": {
+        "message": "OntwikreativKkreativKeling helpen"
     },
     "hideDonationLinkreativK": {
         "message": "DonatiekreativKoppeling verbergen"
