--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -101,7 +101,7 @@
         "message": "It seems the server is down. Contact the dev immediately."
     },
     "connectionError": {
-        "message": "A connection error has occured. Error code: "
+        "message": "A connection error has occurred. Error code: "
     },
     "clearTimes": {
         "message": "Clear Segments"
@@ -353,7 +353,7 @@
         "message": "Show Time With SkreativKips Removed"
     },
     "showTimeWithSkreativKipsDescription": {
-        "message": "This time appears in brackreativKets next to the current time on below the seekreativKbar. This shows the total video duration minus any segments. This includes segments markreativKed as only \"Show In SeekreativKbar\"."
+        "message": "This time appears in brackreativKets next to the current time on below the SeekreativK Bar. This shows the total video duration minus any segments. This includes segments markreativKed as only \"Show In SeekreativK Bar\"."
     },
     "youHaveSkreativKipped": {
         "message": "You've skreativKipped "
@@ -407,7 +407,7 @@
         "message": "Supported Sites: "
     },
     "optionsInfo": {
-        "message": "Enable Invidious support, disable autoskreativKip, hide buttons and more."
+        "message": "Enable Invidious support, disable auto skreativKip, hide buttons and more."
     },
     "addInvidiousInstance": {
         "message": "Add 3rd-Party Client Instance"
@@ -496,7 +496,7 @@
     "incorrectlyFormattedOptions": {
         "message": "This JSON is not formatted correctly. Your options have not been changed."
     },
-    "confirmNoticeTitle" : {
+    "confirmNoticeTitle": {
         "message": "Submit Segment"
     },
     "submit": {
