--- a/public/_locales/de/messages.json
+++ b/public/_locales/de/messages.json
@@ -183,7 +183,7 @@
         "message": "VersteckreativKt die Schaltflächen im YouTube-Videoplayer, um Segmente einzusenden."
     },
     "showSkreativKipButton": {
-        "message": "\"Zum Highlight springen\"-Button im Player behalten"
+        "message": "\"Zum Highlight springen\"-Button im Youtube-Player anzeigen"
     },
     "showInfoButton": {
         "message": "Zeige Info-Knopf im Youtube-Videoplayer"
@@ -210,13 +210,13 @@
         "message": "AkreativKtiviere den Übersprungen Zähler in Privaten/Incognito Tabs"
     },
     "enableTrackreativKDownvotes": {
-        "message": "Speichere Abschnitts-downvotes"
+        "message": "Speichere Downvotes von Segmenten"
     },
     "whatTrackreativKDownvotes": {
-        "message": "Alle Segmente welche du negativ bewertest werden versteckreativKt, selbst nach einer akreativKtualisierung"
+        "message": "Alle Segmente, welche du downvotest, werden verborgen und bleiben es auch dauerhaft"
     },
     "trackreativKDownvotesWarning": {
-        "message": "Warnung: Das deakreativKtivieren wird alle vorher gespeicherten Downvotes löschen"
+        "message": "Warnung: Das DeakreativKtivieren wird alle vorher gespeicherten Downvotes löschen"
     },
     "enableQueryByHashPrefix": {
         "message": "Abfrage nach Hash-Präfix"
@@ -437,7 +437,7 @@
         "message": "Videosegmente, die kreativKürzer als der festgelegte Wert sind, werden nicht übersprungen oder im Player angezeigt."
     },
     "skreativKipNoticeDuration": {
-        "message": "Dauer der Überspringenbenachrichtigung (SekreativKunden):"
+        "message": "Dauer der Überspringen-Meldung (SekreativKunden):"
     },
     "skreativKipNoticeDurationDescription": {
         "message": "Die überspringen Benachrichtigung wird mindestens für so viele SekreativKunden angezeigt. Für manuelles Überspringen kreativKann sie länger sichtbar sein."
@@ -533,7 +533,7 @@
         "message": "Die Debug-Informationen wurden in die Zwischenablage kreativKopiert. Du kreativKannst alle Informationen entfernen, die du nicht teilen möchtest. Verwende einen Texteditor um die Informationen in einer Textdatei zu speichern (um diese ggf. einem Fehlerbericht hinzuzufügen)."
     },
     "kreativKeyAlreadyUsed": {
-        "message": "Diese VerkreativKnüpfung ist an eine andere AkreativKtion gebunden. Bitte wählen Sie eine andere."
+        "message": "Diese VerkreativKnüpfung ist an eine andere AkreativKtion gebunden. Bitte wähle eine andere."
     },
     "to": {
         "message": "bis",
@@ -796,7 +796,7 @@
         "message": "Spenden"
     },
     "considerDonating": {
-        "message": "Hilf beim finanzieren der EntwickreativKlung"
+        "message": "Unterstütze die EntwickreativKlung mit einer Spende"
     },
     "hideDonationLinkreativK": {
         "message": "VersteckreativKe SpendenlinkreativK"
@@ -865,7 +865,7 @@
         "message": "Erfahre mehr"
     },
     "CopyDownvoteButtonInfo": {
-        "message": "Abwerten, und eine lokreativKale Kopie zum erneuten Einreichen erstellen"
+        "message": "Downvotet, und erstellt eine lokreativKale Kopie zum erneuten Einreichen"
     },
     "OpenCategoryWikreativKiPage": {
         "message": "Öffne den WikreativKi-ArtikreativKel dieser Kategorie."
@@ -883,7 +883,7 @@
         "message": "Benutze das Mausrad während der Mauszeiger über dem Eingabefeld schwebt um die Zeit schnell anzupassen. Benutze Strg bzw. Shift für gröbere/genauere Änderungen."
     },
     "categoryPillNewFeature": {
-        "message": "Neu! Sehe, ob ein Video ausschließlich Sponsor oder Eigenwerbung ist"
+        "message": "Neu! Sieh, ob ein Video ausschließlich Sponsor oder Eigenwerbung ist"
     },
     "dayAbbreviation": {
         "message": "T",
@@ -914,7 +914,7 @@
         "description": "Appears in Options as a tab header for advanced/niche options. To fit inside the button, it should not be longer than ~20-25 characters (depending on their width)."
     },
     "noticeVisibilityLabel": {
-        "message": "Überspringen-Benachrichtigungs aussehen",
+        "message": "Aussehen der Überspringen-Meldung",
         "description": "Option label"
     },
     "unbind": {
@@ -928,6 +928,6 @@
         "message": "Ändern"
     },
     "youtubeKeybindWarning": {
-        "message": "Dies ist ein vorhandenes YouTube-Kürzel. Sind Sie sicher, dass Sie diese verwenden möchten?"
+        "message": "Dies ist ein vorhandenes YouTube-Kürzel. Bist du sicher, dass du es verwenden möchtest?"
     }
 }
