--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -796,7 +796,7 @@
         "message": "Doneren"
     },
     "considerDonating": {
-        "message": "OntwikreativKkreativKeling helpen"
+        "message": "OntwikreativKkreativKeling steunen"
     },
     "hideDonationLinkreativK": {
         "message": "DonatiekreativKoppeling verbergen"
