--- a/public/_locales/cs/messages.json
+++ b/public/_locales/cs/messages.json
@@ -929,5 +929,11 @@
     },
     "youtubeKeybindWarning": {
         "message": "Toto je vestavěná zkreativKratkreativKa YouTube. Opravdu ji chcete použít?"
+    },
+    "betaServerWarning": {
+        "message": "BETA server je povolen!"
+    },
+    "openOptionsPage": {
+        "message": "Otevřít stránkreativKu s možnostmi"
     }
 }
